--- a/HTML/day1/index.html
+++ b/HTML/day1/index.html
@@ -2,9 +2,8 @@
  
 Introduction Of FIELD (PPT)Introduction Of HTML (PPT)Structure Of Html Language<Html> <Head> <Title> <Body>
 
-Block Element Tag: <H1> <H2> <H3> <H4> <H5> <H6> <P> <Hr/> <Br/> <Ul><Ol> <Li><Dl> <Dt> <Dd><Ul> <Ol>Tag Attribute: Type=”...” Start=”...” Align=”...”Inline Element Tag: <I> <Em> <B> <Strong> <Big> <Small> <Sub> <Sup> <U><Ins> <Del> <S> <Mark>-->
-
-
+Block Element Tag: <H1> <H2> <H3> <H4> <H5> <H6> <P> <Hr/> <Br/> <Ul><Ol> <Li><Dl> <Dt> <Dd><Ul> <Ol>Tag Attribute: Type=”...” Start=”...” Align=”...”
+  Inline Element Tag: <I> <Em> <B> <Strong> <Big> <Small> <Sub> <Sup> <U><Ins> <Del> <S> <Mark>-->
 
 <!-- HTML - It defines the content and structure of web content. -->
 <html>
@@ -12,17 +11,64 @@ Block Element Tag: <H1> <H2> <H3> <H4> <H5> <H6> <P> <Hr/> <Br/> <Ul><Ol> <Li><D
   <body>
     <!-- body tag helps to show content -->
     <!-- 6 heading tags  -->
+    <!-- block elements  (a block-level element is a type of element that, by default, starts on a new line and takes up the full available width of its parent container) -->
     <h1>heading 1</h1>
     <h2>sub heading 2</h2>
     <h3>sub heading 3</h3>
     <h4>sub heading 4</h4>
     <h5>sub heading 5</h5>
     <h6>sub heading 6</h6>
-    <p>paragraph <br> tags </p>
+    <p>
+      paragraph <br />
+      tags
+    </p>
     <!-- horizontal rule  is a self closing tag -->
-    <hr>
+    <hr />
     <!-- break tag  is a self closing tag  -->
-     <br>
+    <br />
 
+    <!-- unorderd list -->
+    <ul type="square">
+      <li>sports</li>
+      <li>travelling</li>
+      <li>cycling</li>
+    </ul>
+    <!-- ordered list -->
+    <ol type="a" start="5" align="center">
+      <li>cricket</li>
+      <li>football</li>
+      <li>table tennis</li>
+    </ol>
+    <!-- defination list -->
+    <dl>
+      <dt>Drinks:</dt>
+      <dd>Cold drinks</dd>
+      <dd>juice</dd>
+      <dd>coffee</dd>
+      <dd>tea</dd>
+    </dl>
+
+    <!-- inline elements ( an inline element is a type of element that does not begin on a new line and only occupies as much width as its content requires. ) -->
+
+    <i>italic tag</i>
+    <i>italic 2 tag</i>
+    <em>emphasis tag</em>
+    <b>bold tag</b>
+    <strong> strong tag </strong>
+    <big>big tag</big>
+    <small>small tag</small>
+    <!-- subscripted tag -->
+    <p>H<sub>2</sub>O</p>
+    <!-- supscripted tag -->
+    <p>2<sup>2</sup></p>
+    <p>hello <u>world</u></p>
+    <p>water color is <del>blue</del> <ins>Transparent</ins>.</p>
+    <s>strike tag</s>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nesciunt
+      labore ut, aut laborum natus, <mark>recusandae</mark> quod repellendus
+      quos voluptates excepturi. Necessitatibus eum doloremque dolore sed
+      commodi, eligendi ratione laudantium.
+    </p>
   </body>
 </html>
